llvm/dev/decls.llvm.bc.err
/Users/cmk/llvm/bin/llvm-as: llvm/dev/decls.llvm:13:12: error: expected instruction opcode
  ret void zeroinitializer
           ^
